--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    display: border-box;
+    
 }
 
 .container{
@@ -11,30 +11,45 @@
 
 .logo{
     height: 60px;
-    background-color: brown;
+    
     background-image: url(../img/logo.png);
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-nav{
-    height: 50px;
-    background-color: chartreuse;
-}
+
 
 nav li{
     display: inline-block;
-    line-height: 50px;
+    padding: 20px 0;
     margin-right: 10px;
 }
 
 nav li a{
     text-decoration: none;
     color: gray;
-    text-transform: unset;
+    text-transform: uppercase;
 }
 
 .jumbotron{
-    height: 200px;
-    background-color: darkgoldenrod;
+    height: 500px;
+    background-image: url(../img/banner.jpg);
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+    filter: brightness(80%);
+}
+
+#jumbo-title{
+    font-size: 22px;
+}
+
+.jumbo-text{
+    display: inline-block;
+    padding-top: 350px;
+    padding-left: 50px;
+    padding-right: 40%;
+    color: white;
+    
 }
